Closed Bug 1673511 Opened 5 years ago Closed 5 years ago

[Bug] weird sticky keyboard pop up behaviour

Categories

(GeckoView :: IME, defect, P1)

Unspecified
Android
defect

Tracking

(Webcompat Priority:?, firefox91 fixed)

RESOLVED FIXED
91 Branch
Webcompat Priority ?
Tracking Status
firefox91 --- fixed

People

(Reporter: kbrosnan, Assigned: m_kato)

References

Details

(Whiteboard: [geckoview:m90][geckoview:m91])

Attachments

(1 file)

From github: https://github.com/mozilla-mobile/fenix/issues/16106.

Steps to reproduce

Click on a textbox,
Scroll down till url hides (the keyboard does not hide)
Click on any link on the page

Expected behavior

Nothing

Actual behavior

Keyboard now pops up on every page load, forever. Without any reason

Device information

  • Android device: Asus Zenfone
  • Fenix version: nightly

Change performed by the Move to Bugzilla add-on.

Asked for more details from bug reporter.

May be related to Bug 1673434

Assignee: nobody → m_kato
Webcompat Priority: --- → ?
Priority: -- → P1

I cannot reproduce original issue, but I can reproduce https://github.com/webcompat/web-bugs/issues/61014 and https://github.com/webcompat/web-bugs/issues/59509, but both may be different root cause.

https://github.com/webcompat/web-bugs/issues/61014

This uses grid and flexbox. Also, this isn't scrollable content.

https://github.com/webcompat/web-bugs/issues/59509

APZ supports root layer to scroll content, but search box in github seems to be have another layer.

Severity: -- → S3
Priority: P1 → P2
Priority: P2 → P1
Whiteboard: [geckoview:m90]
Whiteboard: [geckoview:m90] → [geckoview:m90][geckoview:m91]

Actually, APZ's zoomToRect doens't support position: fixed content. If so,
we use PresShell's scrollIntoView instead to scroll focused content if it
isn't visible.

Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/2ad6d795630d Use PresShell since APZ doesn't support position: fixed content. r=botond
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch

Moving some keyboard bugs to the new GeckoView::IME component.

Component: General → IME
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: