Bug 1673511 - Use PresShell since APZ doesn't support position: fixed content. r=botond

Actually, APZ's zoomToRect doens't support position: fixed content. If so,
we use PresShell's scrollIntoView instead to scroll focused content if it
isn't visible.

Differential Revision: https://phabricator.services.mozilla.com/D117728