dom/base/nsDOMWindowUtils.cpp
@@ -2994,6 +2994,15 @@ nsDOMWindowUtils::ZoomToFocusedInput() {
     return false;
   }();
 
+  // The content may be inside a scrollable subframe inside a non-scrollable
+  // root content document. In this scenario, we want to ensure that the
+  // main-thread side knows to scroll the content into view before we get
+  // the bounding content rect and ask APZ to adjust the visual viewport.
+  presShell->ScrollContentIntoView(
+      element, ScrollAxis(kScrollMinimum, WhenToScroll::IfNotVisible),
+      ScrollAxis(kScrollMinimum, WhenToScroll::IfNotVisible),
+      ScrollFlags::ScrollOverflowHidden);
+
   if (shouldSkip) {
     return NS_OK;
   }
@@ -3018,15 +3027,6 @@ nsDOMWindowUtils::ZoomToFocusedInput() {
   } else {
     flags |= layers::ONLY_ZOOM_TO_DEFAULT_SCALE;
   }
-
-  // The content may be inside a scrollable subframe inside a non-scrollable
-  // root content document. In this scenario, we want to ensure that the
-  // main-thread side knows to scroll the content into view before we get
-  // the bounding content rect and ask APZ to adjust the visual viewport.
-  presShell->ScrollContentIntoView(
-      element, ScrollAxis(kScrollMinimum, WhenToScroll::IfNotVisible),
-      ScrollAxis(kScrollMinimum, WhenToScroll::IfNotVisible),
-      ScrollFlags::ScrollOverflowHidden);
 
   nsIScrollableFrame* rootScrollFrame =
       presShell->GetRootScrollFrameAsScrollable();
